2011-08-22  Stefano Lattarini  <stefano.lattarini@gmail.com>

	testsuite: use the new awk+shell TAP driver in our own testsuite
	* tests/Makefile.am (TAP_LOG_DRIVER): Redefine to use the new
	awk+shell tap driver, which should be complete enough for use in
	a "controlled" production environment.

2011-08-22  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tap/awk: handle non-zero exit status from the test command
	* lib/tap-driver.sh (get_test_exit_message): New function in the
	awk script, used to extract the exit status of the test program,
	or at least a good guess of it.
	(write_test_results): Use it, reporting an ERROR result if it
	detects that the test program exited with a non-zero status.
	* tests/tap-signal.test: Account for the differences in the
	error messages generated by the awk and perl TAP drivers.  Fix
	an unrelated typo in comments since we are at it.

2011-08-22  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tap/awk: prepare to fetch the exit status of the test command
	* lib/tap-driver.sh: Rewrite some logic in the main parsing loop,
	to make it possible to read the exit status of the test command
	from the last line of the input stream.

2011-08-22  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tap/awk: refactor for future changes
	* lib/tap-driver.sh: Rewrite the awk script so that the parsing
	of the input stream is implemented as a hand-rolled loop in the
	BEGIN block, using the `getline' builtin.

2011-08-22  Stefano Lattarini  <stefano.lattarini@gmail.com>

	testsuite: avoid spurious failure if rst2html program is missing
	* tests/tap-html.test ($required): Require `rst2html'.

2011-08-22  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tap/awk: support Solaris /usr/xpg4/bin/awk
	* lib/tap-driver.sh: Use `\t', not `\\t', to represent tabulation
	character in regexps, even when inside double-quoted strings; that
	seems to be more portable to Solaris 10 XPG4 awk.

2011-08-22  Stefano Lattarini  <stefano.lattarini@gmail.com>
