@@ -1,5 +1,13 @@
 2011-08-22  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	testsuite: avoid spurious failure on Solaris
+	* tests/tap-signal.test (signal_caught): Fix a regression from
+	commit `v1.11-1052-gd630a0d' that was causing this test to fail
+	spuriously on Solaris (due to an already worked-around Solaris
+	/bin/sh bug, see commit `v1.11-981-g0ef3ef5').
+
+2011-08-22  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	testsuite: use the new awk+shell TAP driver in our own testsuite
 	* tests/Makefile.am (TAP_LOG_DRIVER): Redefine to use the new
 	awk+shell tap driver, which should be complete enough for use in
